<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Roomdetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="390dp"
                    android:layout_height="420dp"
                    android:layout_marginTop="7sp"
                    app:cardCornerRadius="8sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/hotel_rooms"
                        android:contentDescription="@string/todo" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="8sp"
                    android:text="@string/details" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/rv_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="12dp"
                    android:visibility="gone"
                    app:cardCornerRadius="10sp">

                    <TableLayout
                        android:id="@+id/workshop_main_edit"
                        android:layout_width="355dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:layout_marginEnd="12sp"
                        android:orientation="vertical"
                        android:padding="7sp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:ignore="UselessParent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3sp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10sp"
                                    android:padding="3sp"
                                    android:text="@string/name"
                                    android:textColor="@color/balck_light"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@id/user_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5sp"
                                    android:textColor="@color/red_color" />

                            </LinearLayout>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:ignore="UselessParent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3sp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10sp"
                                    android:padding="3sp"
                                    android:text="@string/addresse"
                                    android:textColor="@color/balck_light"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/user_adres"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5sp"
                                    android:textColor="@color/red_color" />

                            </LinearLayout>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:ignore="UselessParent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3sp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10sp"
                                    android:padding="3sp"
                                    android:text="@string/count"
                                    android:textColor="@color/balck_light"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/user_count"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5sp"
                                    android:text="@string/_0"
                                    android:textColor="@color/green_color" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5sp"
                                    android:text="@string/days"
                                    android:textColor="@color/red_color" />

                            </LinearLayout>

                        </TableRow>
                    </TableLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:layout_marginTop="17sp"
                    android:layout_marginEnd="7sp"
                    android:layout_marginBottom="7sp"
                    android:background="@drawable/border"
                    android:text="@string/book_now"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/check_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:layout_marginTop="17sp"
                    android:layout_marginEnd="7sp"
                    android:layout_marginBottom="7sp"
                    android:background="@drawable/border"
                    android:text="@string/check_out"
                    android:textColor="@color/red_color"
                    android:textStyle="italic"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>