<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:foregroundGravity="center">

        <ImageView
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:src="@drawable/login_profile" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/hotel_king"
            android:textColor="@color/balck_light"
            android:textSize="28dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginTop="12sp"
                app:hintTextColor="@color/purple_200"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                android:textColorHint="@color/balck_light"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/balck_light"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password Label -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                app:hintTextColor="@color/purple_200"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:layout_marginTop="12sp"
                android:textColorHint="@color/balck_light"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:textColor="@color/balck_light"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/border"
            android:text="Login"
            android:textColor="@color/white_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>